<?xml version="1.0" encoding="utf-8"?><!DOCTYPE resources [<!ENTITY appname "Text Alerter"><!ENTITY author "Shaun Wilkinson">]>

<resources>
    <string name="app_name">&appname;</string>
    <string name="placeholder">Placeholder</string>
    <string name="linkedInURL">https://www.linkedin.com/in/shaun-wilkinson/</string>
    <string name="developerEmail">shaunwilkinsonapps@gmail.com</string>

    <!-- Generic -->
    <string name="action_ok">OK</string>
    <string name="action_submit">Submit</string>
    <string name="action_delete">Delete</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="active">Active</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="alerts">Alerts</string>
    <string name="edit">Edit</string>
    <string name="details">Details</string>
    <string name="_1">1</string>
    <string name="requestFeature">Request Feature</string>
    <string name="sendEmail">Send an email</string>
    <string name="sendEmailError">There are no email apps installed.</string>

    <string name="number">Number</string>
    <string name="enterNumberToPassThrough">Enter the number to Pass Through</string>

    <!-- Rate App -->
    <string name="rate_message">If this app has proven useful, I would appreciate you taking a moment to rate it\n\nThank you for your support!</string>
    <string name="no_more_rate_message">Thank you anyway</string>
    <string name="thank_you_for_rate">Thank you! I appreciate the support</string>


    <!-- Optimization Dialog -->
    <string name="optimization_message">Phones newer than Android Marshmallow \(6.0\) may need this app to be excluded from optimization to ensure the service keeps running in the background properly. This is easy to do by following the instructions below.
        \n\n
     1. Go to Settings → Battery\n
     2. Tap on the top right 3-dot menu, and choose Battery Optimisation.\n
     3. There should be a dropdown below the actionbar on the top left, choose All Apps from the list.\n
     4. Find &appname;\n
     5. Tap on it. You will get a popup with 2 options\, Optimise and Don\'t Optimise\n
     6. Optimise should be selected by default.\n
     7. Select \"Don\'t Optimise\", and press \"Done\".\n
     8. All Done</string>

    <!-- Permissions -->
    <string name="permissions">Permissions</string>
    <string name="protected_status_title">Protected App Status</string>
    <string name="protected_status_description">This app needs specific permission to keep running in the background, this allows the app to listen for specific texts and run the alerts</string>

    <string name="check_permissions">Check Permissions</string>
    <string name="check_permissions_description">Tap to re-check for required permissions</string>

    <string name="all_required_permissions_granted">All required permissions are granted</string>
    <string name="denied_sms_permission_permanently">&appname; will not function due to SMS denied, enable in settings to continue</string>
    <string name="denied_sms_permission">You must allow SMS permission for this app to function</string>
    <string name="rational_sms_title">Receive SMS Permission</string>
    <string name="rational_sms_description">The Receive SMS permission is required so that the app may intercept sms and process who is the sender, this is needed so that the app can fire an alert when an sms is received from a sender listed in one of the user created alerts.\n\nWithout this permission this app cannot function at all.\n\nClicking OK will ask you to grant permission again</string>

    <!-- Service -->
    <string name="smswatchservice_name">&appname; Service</string>
    <string name="serviceRunningTitle">&appname; Service Running</string>
    <string name="serviceRunningDesc">The service is running</string>

    <string name="startService">Start Service</string>
    <string name="startServiceDescription">Started watching incoming texts</string>
    <string name="stopService">Stop Service</string>
    <string name="stopServiceDescription">Stopped watching incoming texts</string>
    <string name="stopRinging">Stop Ringing</string>

    <string name="disabledAlert">Disabled %1$s to stop further alerts, re-enable to start alerting.</string>

    <!-- Alert Setup -->
    <string name="createAlertTitle">Create an Alert</string>
    <string name="alert_name">Alert Name</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="ringtone">Ringtone</string>
    <string name="secondsToRingFor">Seconds to Ring</string>
    <string name="vibrate">Vibrate</string>
    <string name="save">Save</string>
    <string name="ringtonePickerTitle">Select a ringtone for the alert</string>
    <string name="emptyAlertList">Create a new alert by tapping + below</string>
    <string name="select_a_contact">Select a contact</string>
    <string name="select_a_ringtone">Select a ringtone</string>

    <string name="alert_name_error">You need to enter an alert name</string>
    <string name="alert_error_over_limit">Enter %1$i or less characters</string>

    <string name="alert_phone_number_error">You need to enter a valid number or text</string>
    <string name="alert_seconds_to_ring_error">You need to enter max seconds to ring for</string>
    <string name="alert_phone_number_character_error">Phone numbers should not contain any special characters or spaces other than +</string>
    <string name="alert_phone_number_not_unique_error">Phone number must be unique</string>

    <!-- Alert Ringing Dialog -->
    <string name="alert_ringing_dialog_title">Alert!</string>
    <string name="alert_ringing_dialog_description">Received a text from %1$s</string>
    <string name="stop_ringing">Stop Ringing</string>

    <!-- Edit Alert -->
    <string name="editAlertTitle">Edit Alert</string>
    <string name="title_activity_settings">Settings</string>

    <!-- About Page -->
    <string name="about_details">Special thanks to work colleagues and friends for their support in design and testing.</string>
    <string name="about_text">&appname; was created between copious amounts of work and university in order to wake me up for On-Call Rota texts from \'emergency\'.
        \n\nHopefully, this app will be of use to others and if you have any issues at all feel free to get in touch at seikoshadow@gmail.com</string>
</resources>
