<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- SettingsDialogFragment, should always be in the overflow -->
    <item android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item android:id="@+id/stop_receiver"
        android:title="@string/stopService"
        android:visible="false"
        app:showAsAction="never"/>

    <item android:id="@+id/start_receiver"
        android:title="@string/startService"
        android:visible="false"
        app:showAsAction="never"/>

    <item android:id="@+id/action_feedback"
        android:title="@string/requestFeature"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>