<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    android:fitsSystemWindows="true">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        style="@style/createOrEditLinearLayout"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <TextView
            android:id="@+id/nameLabel"
            style="@style/createOrEditLabel"
            android:text="@string/alert_name"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/nameEditText"
            style="@style/createOrEditField"
            android:hint="@string/alert_name"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/phoneNumberLabel"
            style="@style/createOrEditLabel"
            android:text="@string/phoneNumber" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/numberEditText"
                style="@style/createOrEditField"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@android:string/emptyPhoneNumber"
                android:inputType="text" />

            <ImageButton
                android:id="@+id/contactPickerBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/alert_contact_select_icon"
                android:contentDescription="@string/select_a_contact" />
        </LinearLayout>

        <TextView
            android:id="@+id/numOfRingsLabel2"
            style="@style/createOrEditLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="7dp"
            android:text="@string/ringtone" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ringtoneSelectValue"
                style="@style/createOrEditField"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:paddingTop="6dp" />

            <ImageButton
                android:id="@+id/ringtoneSelectBtn"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:background="@android:color/transparent"
                android:scaleType="centerInside"
                android:src="@drawable/alert_ringtone_select_icon"
                android:theme="@style/createOfEditButton"
                android:contentDescription="@string/select_a_ringtone"/>
        </LinearLayout>

        <TextView
            android:id="@+id/numOfRingsLabel"
            style="@style/createOrEditLabel"
            android:layout_marginTop="7dp"
            android:text="@string/secondsToRingFor" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/numOfRingsEditText"
            style="@style/createOrEditField"
            android:hint="@string/_1"
            android:inputType="number" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/vibrateSwitch"
            style="@style/createOrEditSwitch"
            android:text="@string/vibrate"
            android:theme="@style/Color1SwitchStyle" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/activeSwitch"
            style="@style/createOrEditSwitch"
            android:text="@string/active"
            android:visibility="invisible" />


    </LinearLayout>


</androidx.coordinatorlayout.widget.CoordinatorLayout>