<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/number" />

    <EditText
        android:id="@+id/enteredNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enterNumberToPassThrough"
        android:inputType="text"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="19dp" />

    <Button
        android:id="@+id/submitDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:onClick="submitNumber"
        android:text="@string/action_submit"
        tools:layout_editor_absoluteX="296dp"
        tools:layout_editor_absoluteY="65dp" />


</LinearLayout>