<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ListViewLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    app:layout_constraintEnd_toStartOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <GridLayout style="@style/ListViewGridLayout">

        <TextView
            android:id="@+id/alertsListChildPhoneLabel"
            style="@style/ListViewTextViewLabel"
            android:layout_row="0"
            android:layout_column="0"
            android:text="@string/phoneNumber" />

        <TextView
            android:id="@+id/alertsListChildPhoneText"
            style="@style/ListViewTextViewField"
            android:layout_row="1"
            android:layout_column="0"
            tools:text="@string/phoneNumber" />


        <TextView
            android:id="@+id/alertsListChildRingtoneLabel"
            style="@style/ListViewTextViewLabel"
            android:layout_row="0"
            android:layout_column="1"
            android:text="@string/ringtone" />

        <TextView
            android:id="@+id/alertsListChildRingtoneText"
            style="@style/ListViewTextViewField"
            android:layout_row="1"
            android:layout_column="1"
            tools:text="@string/ringtone" />

        <TextView
            android:id="@+id/alertsListChildRingLabel"
            style="@style/ListViewTextViewLabel"
            android:layout_row="0"
            android:layout_column="2"
            android:text="@string/secondsToRingFor" />

        <TextView
            android:id="@+id/alertsListChildRingText"
            style="@style/ListViewTextViewField"
            android:layout_row="1"
            android:layout_column="2"
            tools:text="@string/secondsToRingFor" />

        <TextView
            android:id="@+id/alertsListChildVibrateLabel"
            style="@style/ListViewTextViewLabel"
            android:layout_row="3"
            android:layout_column="0"
            android:text="@string/vibrate" />

        <TextView
            android:id="@+id/alertsListChildVibrateText"
            style="@style/ListViewTextViewField"
            android:layout_row="4"
            android:layout_column="0"
            tools:text="@string/vibrate" />

        <TextView
            android:id="@+id/alertsListChildActiveLabel"
            style="@style/ListViewTextViewLabel"
            android:layout_row="3"
            android:layout_column="1"
            android:text="@string/active" />

        <TextView
            android:id="@+id/alertsListChildActiveText"
            style="@style/ListViewTextViewField"
            android:layout_row="4"
            android:layout_column="1"
            tools:text="@string/active" />

    </GridLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#293841" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/deleteBtn"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:layout_marginEnd="5dp"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/roboto"
            android:text="@string/action_delete"
            android:textAllCaps="false" />

        <Button
            android:id="@+id/editBtn"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_gravity="end"
            android:background="@drawable/button_gradient"
            android:fontFamily="@font/roboto"
            android:text="@string/edit"
            android:textAllCaps="false" />
    </LinearLayout>

</LinearLayout>