<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ListViewGridLayout">

    <TextView
        android:id="@+id/alertsListChildPhoneLabel"
        style="@style/ListViewTextViewLabel"
        android:layout_row="1"
        tools:text="@string/phoneNumber" />

    <TextView
        android:id="@+id/alertsListChildPhoneText"
        style="@style/ListViewTextViewField"
        android:layout_row="1"
        tools:text="@string/phoneNumber" />


    <TextView
        android:id="@+id/alertsListChildRingtoneLabel"
        style="@style/ListViewTextViewLabel"
        android:layout_row="2"
        tools:text="@string/ringtone" />

    <TextView
        android:id="@+id/alertsListChildRingtoneText"
        style="@style/ListViewTextViewField"
        android:layout_row="2"
        tools:text="@string/ringtone" />

    <TextView
        android:id="@+id/alertsListChildRingLabel"
        style="@style/ListViewTextViewLabel"
        android:layout_row="3"
        tools:text="@string/numberOfRings" />

    <TextView
        android:id="@+id/alertsListChildRingText"
        style="@style/ListViewTextViewField"
        android:layout_row="3"
        tools:text="@string/numberOfRings" />

    <TextView
        android:id="@+id/alertsListChildVibrateLabel"
        style="@style/ListViewTextViewLabel"
        android:layout_row="4"
        tools:text="@string/vibrate" />

    <TextView
        android:id="@+id/alertsListChildVibrateText"
        style="@style/ListViewTextViewField"
        android:layout_row="4"
        tools:text="@string/vibrate" />

    <TextView
        android:id="@+id/alertsListChildActiveLabel"
        style="@style/ListViewTextViewLabel"
        android:layout_row="5"
        tools:text="@string/active" />

    <TextView
        android:id="@+id/alertsListChildActiveText"
        style="@style/ListViewTextViewField"
        android:layout_row="5"
        tools:text="@string/active" />

</GridLayout>