<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.seikoshadow.apps.textthrough.MainActivity"
    android:orientation="vertical"
    >

  <TextView
      android:id="@+id/titleTextView"
      style="@android:style/Widget.DeviceDefault.Light.TextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center_horizontal"
      android:text="@string/app_name"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <include layout="@layout/phone_number_entry"/>

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="match_parent"
      android:orientation="horizontal">

    <Button
        android:id="@+id/startServiceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:onClick="startService"
        android:text="@string/startService" />

    <Button
        android:id="@+id/stopServiceBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_weight="1"
        android:onClick="stopService"
        android:text="@string/stopService" />
  </LinearLayout>

</LinearLayout>
